--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@testing-library/jest-dom": "^6.6.3",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
@@ -21,7 +22,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.29.0",
     "redux": "^5.0.1",
     "zod": "^3.24.1"
   },
