--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@types/react-router-dom": "^5.3.3",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.9",
+    "date-fns": "^3.0.0",
     "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.561.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.29.0",
     "redux": "^5.0.1",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
